[project]
name = "berlin-united-django-keycloak"
version = "0.2.6"
description = "Integrate Keycloak with Django 5.2+"
authors = [
    { name = "Stella Alice Schlotter", email = "stella.a.schlotter@gmail.com" },
    { name = "Samuel C. Tyler", email = "skamansam@gmail.com" },
    { name = "Ahmad Dabo", email = "dabo.cs@gmail.com" },
    { name = "Peter Slump", email = "peter@yarf.nl" },
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "keycloak",
    "auth",
    "django52",
    "python312",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=5.2",
    "python-keycloak-client>=0.2.3,<0.3",
]

[project.urls]
Homepage = "https://github.com/Visual-Analytics-Toolbox/django-keycloak"
Repository = "https://github.com/Visual-Analytics-Toolbox/django-keycloak"
"Bug Tracker" = "https://github.com/Visual-Analytics-Toolbox/django-keycloak/issues"

[dependency-groups]
dev = ["django-dynamic-fixtures>=0.2.1,<0.3"]
test = [
    "pytest-django>=4.5.2,<5",
    "pytest-cov>=4.1.0,<5",
    "mock>=5.1.0,<6",
    "factory-boy>=3.3.0,<4",
    "freezegun>=1.2.2,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]
